# sentinel-fi

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: init.sql
src/: __init__.py  anomaly_rules.py  batch_inserter.py  config.py  consumer.py  database.py  events.py  models.py  producer.py
src/dashboard/: broadcaster.py  server.py
src/dashboard/static/: index.html
tests/: test_anomaly_rules.py
